# pilotprojekt-GrundschutzKI

./: .gitignore  GrundschutzKI_Fragen-Antworten-Fundstellen.csv  README.md  main.py  pyproject.toml  system.md
data/data_evaluation/: 08_IT-GS-Praktiker-Pruefungsfragen.json  GSKI_Fragen-Antworten-Fundstellen_10_Komplex.csv  flagged_cases.csv  gt_scores.jsonl  upper_bound_outputs_gpt.jsonl  upper_bound_outputs_granite.jsonl
data/data_preprocessed/: glossar.json
data/results/: README.md  gpt-oss-120b_baseline_123-einfach_answers.csv  gpt-oss-120b_baseline_43-komplex_answers.csv  gpt-oss-120b_json-pdfs_123-einfach_answers.csv  gpt-oss-120b_json-pdfs_123-einfach_evaluated.csv  gpt-oss-120b_json-pdfs_43-komplex_answers.csv  gpt-oss-120b_kompendium-xml.csv  gpt-oss-120b_kompendium-xml.md  gpt-oss-120b_kompendium-xml_compact.csv  gpt-oss-120b_xml-pdfs_123-einfach_answers.csv  gpt-oss-120b_xml-pdfs_43-komplex_answers.csv  granite-4-h-tiny_baseline_123-einfach_answers.csv  granite-4-h-tiny_baseline_123-einfach_evaluated.csv  test_multi_2runs.md  (+12 more)
notebooks/: .env.example  00_upper_bound.ipynb  01_rag_baseline.ipynb  02_dspy_rag.ipynb  02_run_evaluation_example.ipynb  03_multi_run_evaluation_example.ipynb  03_rag_preprocessed.ipynb  04_dspy_light_model.ipynb  05_json_preprocessing.ipynb  README.md  Results.md  litellm_client.py
scripts/: README.md  generate_missing_answers.py  gski_pipeline.py  ingest_databases.py  parse_glossar.py  parse_grundschutz.py  parse_standards_pdf.py  run_evaluation.py  run_human_evaluation.py  run_multi_evaluation.py  run_ragas_only.py
(+316 files in other folders)
