[project]
name = "pilotprojekt-grundschutzki"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.2.0",
    "ipywidgets>=8.1.5",
    "langchain>=0.2.16",
    "langchain-openai>=0.2.8",
    "litellm>=1.75.8",
    "lxml>=6.0.2",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "pymupdf>=1.26.7",
    "qdrant-client>=1.14.1",
    "ragas>=0.2.13",
    "dspy-ai>=2.4.13",
]
